--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,13 +1,11 @@
-html,
-body,
-#root {
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-}
-
-#root {
+.homepage-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+body {
+    overflow: hidden;
 }
